--- a/tp/clientconsole/pom.xml
+++ b/tp/clientconsole/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>fr.orleans.miage.iisi</groupId>
-    <artifactId>tp1-ws</artifactId>
+    <artifactId>clientconsole</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>tp1-ws</name>
-    <description>WebService TP1</description>
+    <name>clientconsole</name>
+    <description>Client Console</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -27,17 +27,10 @@
         </dependency>
 
         <dependency>
-            <groupId>fr.miage.orleans.wsi</groupId>
-            <artifactId>modelemotus</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -82,7 +75,6 @@
             <artifactId>jackson-jaxrs-json-provider</artifactId>
             <version>2.4.1</version>
         </dependency>
-
 
     </dependencies>
 
