--- a/tp/clientweb/package.json
+++ b/tp/clientweb/package.json
@@ -76,6 +76,8 @@
         "tslint-config-prettier": "1.17.0",
         "tslint-loader": "3.6.0",
         "typescript": "3.2.2",
+        "sass": "1.16.1",
+        "sass-loader": "7.1.0",
         "postcss-loader": "3.0.0",
         "xml2js": "0.4.19",
         "webpack": "4.29.0",
