--- a/tp/clientweb/package.json
+++ b/tp/clientweb/package.json
@@ -8,85 +8,85 @@
         "node_modules"
     ],
     "dependencies": {
-        "@angular/common": "7.2.2",
-        "@angular/compiler": "7.2.2",
-        "@angular/core": "7.2.2",
-        "@angular/forms": "7.2.2",
-        "@angular/platform-browser": "7.2.2",
-        "@angular/platform-browser-dynamic": "7.2.2",
-        "@angular/router": "7.2.2",
+        "@angular/common": "7.2.7",
+        "@angular/compiler": "7.2.7",
+        "@angular/core": "7.2.7",
+        "@angular/forms": "7.2.7",
+        "@angular/platform-browser": "7.2.7",
+        "@angular/platform-browser-dynamic": "7.2.7",
+        "@angular/router": "7.2.7",
         "@fortawesome/angular-fontawesome": "0.3.0",
-        "@fortawesome/fontawesome-svg-core": "1.2.12",
-        "@fortawesome/free-solid-svg-icons": "5.6.3",
-        "@ng-bootstrap/ng-bootstrap": "4.0.1",
+        "@fortawesome/fontawesome-svg-core": "1.2.15",
+        "@fortawesome/free-solid-svg-icons": "5.7.2",
+        "@ng-bootstrap/ng-bootstrap": "4.0.4",
         "@ngx-translate/core": "11.0.1",
         "@ngx-translate/http-loader": "4.0.0",
-        "bootstrap": "4.2.1",
-        "core-js": "2.6.3",
+        "bootstrap": "4.3.1",
+        "core-js": "^2.6.5",
         "moment": "2.24.0",
-        "ng-jhipster": "0.9.1",
-        "ngx-cookie": "2.0.1",
+        "ng-jhipster": "0.9.3",
+        "ngx-cookie": "4.1.2",
         "ngx-infinite-scroll": "7.0.1",
-        "ngx-webstorage": "2.0.1",
-        "rxjs": "6.3.3",
-        "swagger-ui": "2.2.10",
+        "ngx-webstorage": "3.0.2",
+        "rxjs": "6.4.0",
+        "swagger-ui": "3.21.0",
         "tslib": "1.9.3",
         "zone.js": "0.8.29"
     },
     "devDependencies": {
-        "@angular/cli": "7.2.3",
-        "@angular/compiler-cli": "7.2.2",
-        "@ngtools/webpack": "7.2.3",
-        "@types/jest": "23.3.13",
-        "@types/node": "10.12.18",
+        "@angular/cli": "7.3.4",
+        "@angular/compiler-cli": "7.2.7",
+        "@ngtools/webpack": "7.3.4",
+        "@types/jest": "24.0.9",
+        "@types/node": "11.10.4",
         "angular-router-loader": "0.8.5",
         "angular2-template-loader": "0.6.2",
-        "autoprefixer": "9.4.6",
+        "autoprefixer": "9.4.9",
         "browser-sync": "2.26.3",
         "browser-sync-webpack-plugin": "2.2.2",
         "cache-loader": "2.0.1",
         "codelyzer": "4.5.0",
-        "copy-webpack-plugin": "4.6.0",
+        "copy-webpack-plugin": "5.0.0",
         "css-loader": "2.1.0",
         "file-loader": "3.0.1",
         "fork-ts-checker-webpack-plugin": "0.5.2",
         "friendly-errors-webpack-plugin": "1.7.0",
-        "generator-jhipster": "5.8.1",
+        "generator-jhipster": "5.8.2",
         "html-loader": "0.5.5",
         "html-webpack-plugin": "3.2.0",
         "husky": "1.3.1",
-        "jest": "23.6.0",
-        "jest-junit": "6.1.0",
+        "jest": "24.1.0",
+        "jest-junit": "6.3.0",
         "jest-preset-angular": "6.0.2",
         "jest-sonar-reporter": "2.0.0",
-        "lint-staged": "8.1.0",
+        "lint-staged": "8.1.5",
         "mini-css-extract-plugin": "0.5.0",
         "moment-locales-webpack-plugin": "1.0.7",
         "optimize-css-assets-webpack-plugin": "5.0.1",
-        "prettier": "1.16.1",
+        "prettier": "1.16.4",
         "reflect-metadata": "0.1.13",
         "rimraf": "2.6.3",
         "simple-progress-webpack-plugin": "1.1.2",
         "style-loader": "0.23.1",
-        "terser-webpack-plugin": "1.2.1",
-        "thread-loader": "2.1.1",
+        "terser-webpack-plugin": "1.2.3",
+        "thread-loader": "2.1.2",
         "to-string-loader": "1.1.5",
         "ts-loader": "5.3.3",
-        "tslint": "5.12.1",
-        "tslint-config-prettier": "1.17.0",
-        "tslint-loader": "3.6.0",
-        "typescript": "3.2.2",
-        "sass": "1.16.1",
+        "tslint": "5.13.1",
+        "tslint-config-prettier": "1.18.0",
+        "tslint-loader": "3.5.4",
+        "typescript": "3.3.3333",
+        "sass": "1.17.2",
         "sass-loader": "7.1.0",
         "postcss-loader": "3.0.0",
         "xml2js": "0.4.19",
-        "webpack": "4.29.0",
-        "webpack-cli": "3.2.1",
-        "webpack-dev-server": "3.1.14",
+        "webpack": "4.29.6",
+        "webpack-cli": "3.2.3",
+        "webpack-dev-server": "3.2.1",
         "webpack-merge": "4.2.1",
         "webpack-notifier": "1.7.0",
         "webpack-visualizer-plugin": "0.1.11",
-        "workbox-webpack-plugin": "3.6.3",
+        "workbox-webpack-plugin": "4.0.0",
         "write-file-webpack-plugin": "4.5.0"
     },
     "engines": {
