--- a/tp/modele/pom.xml
+++ b/tp/modele/pom.xml
@@ -13,7 +13,6 @@
     <version>1.0-SNAPSHOT</version>
     <name>modele</name>
     <description>Demo project for Spring Boot</description>
-    <packaging>jar</packaging>
 
     <properties>
         <java.version>1.8</java.version>
@@ -23,6 +22,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -50,6 +53,7 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.3.9.Final</version>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
         <dependency>
             <groupId>org.hibernate.validator</groupId>
