--- a/tp/modele/src/main/resources/application.properties
+++ b/tp/modele/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/motus?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+server.port=8080
